# Minimal-TeamSpeak3-client

./: .gitignore  Cargo.toml  LICENSE-MIT  README.ja.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: api.rs  audio.rs  client.rs  config.rs  i18n.rs  main.rs  tray.rs
