[package]
name = "ts3-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# crates.io版は古いためgit版を使う
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", default-features = false, features = ["default-tls", "audio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures = "0.3"
anyhow = "1"
tracing-subscriber = "0.3"
eframe = "0.35.0"
cpal = "0.18.1"
audiopus = "0.3.0-rc.0"
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib", version = "0.1.0" }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
axum = "0.8.9"
tray-icon = "0.24.1"
auto-launch = "0.6.0"
